--- a/setting.html
+++ b/setting.html
@@ -132,15 +132,27 @@
                                 <!-- BACKGROUND -->
                                 <div id="background-panel" class="option-panel mb-4">
                                         <p class="option-label">Background</p>
-                                        <div class="row px-4 justify-content-center">
-                                                <!-- <div class="col-4 background-item " id="background-1"> </div> -->
-                                                <div class="col-4 background-item " id="background-0"> </div>
-                                                <!-- <div class="col-4 background-item " id="background-3"> </div> -->
+                                        <div id="outer-background-panel">
+                                                <p> Outer </p>
+                                                <div class="row px-4 justify-content-center">
+                                                        <div class="col-4 background-item " id="background-0"> </div>
+                                                </div>
+                                                <div class="row px-4 justify-content-center">
+                                                        <div class="col-4 background-item " id="background-1"> </div>
+                                                        <div class="col-4 background-item " id="background-2"> </div>
+                                                        <div class="col-4 background-item " id="background-3"> </div>
+                                                </div>
                                         </div>
-                                        <div class="row px-4 justify-content-center">
-                                                <div class="col-4 background-item " id="background-1"> </div>
-                                                <div class="col-4 background-item " id="background-2"> </div>
-                                                <div class="col-4 background-item " id="background-3"> </div>
+                                        <div id="inner-background-panel" class="mt-3">
+                                                <p> Inner </p>
+                                                <div class="row px-4 justify-content-center">
+                                                        <div class="col-4 background-item " id="background-0"> </div>
+                                                </div>
+                                                <div class="row px-4 justify-content-center">
+                                                        <div class="col-4 background-item " id="background-1"> </div>
+                                                        <div class="col-4 background-item " id="background-2"> </div>
+                                                        <div class="col-4 background-item " id="background-3"> </div>
+                                                </div>
                                         </div>
                                 </div>
 
