Add more backgrounds

--- a/setting.html
+++ b/setting.html
@@ -129,6 +129,15 @@
                                         </div>
                                 </div>
 
+                                <!-- BORDER -->
+                                <div id="border-panel" class="option-panel mb-4">
+                                        <p class="option-label">Border</p>
+                                                <div class='range-slider'>
+                <label for='border-radius'>Radius</label>
+                <input class='range-slider__range' id='border-radius' type='range' min='0' max='50' step='0.1' value='0'>
+                <span class='range-slider__value'>0</span>
+        </div>                                </div>
+
                                 <!-- BACKGROUND -->
                                 <div id="background-panel" class="option-panel mb-4">
                                         <p class="option-label">Background</p>
@@ -141,6 +150,13 @@
                                                         <div class="col-4 background-item " id="background-1"> </div>
                                                         <div class="col-4 background-item " id="background-2"> </div>
                                                         <div class="col-4 background-item " id="background-3"> </div>
+                                                        <div class="col-4 background-item " id="background-4"> </div>
+                                                        <div class="col-4 background-item " id="background-5"> </div>
+                                                        <div class="col-4 background-item " id="background-6"> </div>
+                                                        <div class="col-4 background-item " id="background-7"> </div>
+                                                        <div class="col-4 background-item " id="background-8"> </div>
+                                                        <div class="col-4 background-item " id="background-9"> </div>
+
                                                 </div>
                                         </div>
                                         <div id="inner-background-panel" class="mt-3">
@@ -152,17 +168,16 @@
                                                         <div class="col-4 background-item " id="background-1"> </div>
                                                         <div class="col-4 background-item " id="background-2"> </div>
                                                         <div class="col-4 background-item " id="background-3"> </div>
+                                                        <div class="col-4 background-item " id="background-4"> </div>
+                                                        <div class="col-4 background-item " id="background-5"> </div>
+                                                        <div class="col-4 background-item " id="background-6"> </div>
+                                                        <div class="col-4 background-item " id="background-7"> </div>
+                                                        <div class="col-4 background-item " id="background-8"> </div>
+                                                        <div class="col-4 background-item " id="background-9"> </div>
+
                                                 </div>
                                         </div>
                                 </div>
-
-                                <div id="border-panel" class="option-panel mb-4">
-                                        <p class="option-label">Border</p>
-                                                <div class='range-slider'>
-                <label for='border-radius'>Radius</label>
-                <input class='range-slider__range' id='border-radius' type='range' min='0' max='50' step='0.1' value='0'>
-                <span class='range-slider__value'>0</span>
-        </div>                                </div>
                         </div>
 
                         <div class="setting-save-panel">
