[Refactor] Split background CSS with meaningful names

--- a/setting.html
+++ b/setting.html
@@ -144,19 +144,16 @@
                                         <div id="outer-background-panel">
                                                 <p> Outer </p>
                                                 <div class="row px-4 justify-content-center">
-                                                        <div class="col-4 background-item " id="background-0"> </div>
+                                                        <div class="col-4 background-item " id="none-bg"> </div>
+                                                        <div class="col-4 background-item custom-background hide" id="custom-background"> </div>
                                                 </div>
                                                 <div class="row px-4 justify-content-center">
-                                                        <div class="col-4 background-item " id="background-1"> </div>
-                                                        <div class="col-4 background-item " id="background-2"> </div>
-                                                        <div class="col-4 background-item " id="background-3"> </div>
-                                                        <div class="col-4 background-item " id="background-4"> </div>
-                                                        <div class="col-4 background-item " id="background-5"> </div>
-                                                        <div class="col-4 background-item " id="background-6"> </div>
-                                                        <div class="col-4 background-item " id="background-7"> </div>
-                                                        <div class="col-4 background-item " id="background-8"> </div>
-                                                        <div class="col-4 background-item " id="background-9"> </div>
-
+                                                        <div class="col-4 background-item liquid-cheese-bg"> </div>
+                                                        <div class="col-4 background-item protruding-squares-bg"> </div>
+                                                        <div class="col-4 background-item wintery-sunburst-bg"> </div>
+                                                        <div class="col-4 background-item animated-gradient-bg"> </div>
+                                                        <div class="col-4 background-item  linear-gradient-bg"> </div>
+                                                        <div class="col-4 background-item vanishing-stripes-bg"> </div>
                                                 </div>
                                         </div>
                                         <div id="inner-background-panel" class="mt-3">
@@ -165,16 +162,12 @@
                                                         <div class="col-4 background-item " id="background-0"> </div>
                                                 </div>
                                                 <div class="row px-4 justify-content-center">
-                                                        <div class="col-4 background-item " id="background-1"> </div>
-                                                        <div class="col-4 background-item " id="background-2"> </div>
-                                                        <div class="col-4 background-item " id="background-3"> </div>
-                                                        <div class="col-4 background-item " id="background-4"> </div>
-                                                        <div class="col-4 background-item " id="background-5"> </div>
-                                                        <div class="col-4 background-item " id="background-6"> </div>
-                                                        <div class="col-4 background-item " id="background-7"> </div>
-                                                        <div class="col-4 background-item " id="background-8"> </div>
-                                                        <div class="col-4 background-item " id="background-9"> </div>
-
+                                                        <div class="col-4 background-item liquid-cheese-bg"> </div>
+                                                        <div class="col-4 background-item protruding-squares-bg"> </div>
+                                                        <div class="col-4 background-item wintery-sunburst-bg"> </div>
+                                                        <div class="col-4 background-item animated-gradient-bg"> </div>
+                                                        <div class="col-4 background-item  linear-gradient-bg"> </div>
+                                                        <div class="col-4 background-item vanishing-stripes-bg"> </div>
                                                 </div>
                                         </div>
                                 </div>
