--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-        <title>Dynamic Framework</title>
+        <title>Dynamic UI Framework</title>
         <meta charset="UTF-8" />
         <meta name="author" content="enginoobz" />
         <meta name="description" content="Demo page for Dynamic Style Framework" />
@@ -91,6 +91,29 @@ echo Toggle(label: "Dynamic toggle");
         <pre><code class="language-php">// optional params: string $id = $value = format($name)
 echo Checkbox(name:"Dynamic checkbox");
 </code></pre>
+</div><div class=" d-flex justify-content-center flex-row">
+                        <div class="dropdown" id="dropdown-demo">
+        <button type="button" class="dropdown-label">Dynamic dropdown</button>
+        <button type="button" class=" btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="fas fa-angle-down dropdown-arrow"></span>
+                <span class="sr-only">Toggle Dropdown</span>
+        </button>
+        <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="javascript:;" value="1">Option 1</a>
+                                        <a class="dropdown-item" href="javascript:;" value="2">Option 2</a>
+                                        <a class="dropdown-item" href="javascript:;" value="3">Option 3</a>
+                                <!-- <div class="dropdown-divider"></div> -->
+                <!-- <a class="dropdown-item" href="#">Separated link</a> -->
+        </div>
+</div>        </div><div class="code-block">
+        <pre><code class="language-php">// optional dropdown item keys: "href" =&gt; "javascript:;", "value" = 0
+echo Dropdown(
+  "Dynamic dropdown",
+  "dropdown-demo",
+  ["label" =&gt; "Option 1", "value" =&gt; 1],
+  ["label" =&gt; "Option 2", "value" =&gt; 2],
+  ["label" =&gt; "Option 3", "value" =&gt; 3],
+)</code></pre>
 </div>
                                 <h5 class="my-4">V - Navigation Components</h5>
                                 <div class="code-block">
@@ -105,6 +128,7 @@ echo Checkbox(name:"Dynamic checkbox");
         <!-- <div class="overlay-bg background-1"></div> -->
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
 
