--- a/setting.html
+++ b/setting.html
@@ -7,7 +7,7 @@
                                 <!-- TODO: make buttons  equal widths -->
                                 <div class="dropdown" id="dropdown-ui-style">
         <button type="button" class="dropdown-label">Select style</button>
-        <button type="button" class=" btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="fas fa-angle-down dropdown-arrow"></span>
                 <span class="sr-only">Toggle Dropdown</span>
         </button>
