Set opacity for inner background

--- a/setting.html
+++ b/setting.html
@@ -152,7 +152,7 @@
                                                 <p> Outer </p>
                                                 <div class="row px-4 justify-content-center">
                                                         <div class="col-4 background-item " id="none-bg"> </div>
-                                                        <div class="col-4 background-item custom-background hide" id="custom-background"> </div>
+                                                        <div class="col-4 background-item custom-bg hide" id="custom-bg"> </div>
                                                 </div>
                                                 <div class="row px-4 justify-content-center">
                                                         <div class="col-4 background-item liquid-cheese-bg"> </div>
