Implement Dynamic font using Webfont for loading

--- a/setting.html
+++ b/setting.html
@@ -145,6 +145,27 @@
                 <span class='range-slider__value'>0</span>
         </div>                                </div>
 
+                                <!-- FONT -->
+                                <div id="font-panel" class="option-panel mb-4">
+                                        <p class="option-label">Font</p>
+                                        <div id="font-family-panel">
+                                                <p>Family</p>
+                                                <div class="dropdown" id="dropdown-font-family">
+        <button type="button" class="dropdown-label">Agency FB</button>
+        <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="fas fa-angle-down dropdown-arrow"></span>
+                <span class="sr-only">Toggle Dropdown</span>
+        </button>
+        <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="javascript:;" value="0">Palette Mosaic</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Style Script</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Ubuntu</a>
+                                <!-- <div class="dropdown-divider"></div> -->
+                <!-- <a class="dropdown-item" href="#">Separated link</a> -->
+        </div>
+</div>                                        </div>
+                                </div>
+
                                 <!-- BACKGROUND -->
                                 <div id="background-panel" class="option-panel mb-4">
                                         <p class="option-label">Background</p>
@@ -178,6 +199,7 @@
                                                 </div>
                                         </div>
                                 </div>
+
                         </div>
 
                         <div class="setting-save-panel">
