--- a/setting.html
+++ b/setting.html
@@ -163,7 +163,11 @@
                                 <!-- <div class="dropdown-divider"></div> -->
                 <!-- <a class="dropdown-item" href="#">Separated link</a> -->
         </div>
-</div>                                        </div>
+</div>        <div class='range-slider'>
+                <label for='range-slider_line-height'>Line height</label>
+                <input class='range-slider__range' id='range-slider_line-height' type='range' min='1' max='2' step='0.05' value='1'>
+                <span class='range-slider__value'>1</span>
+        </div>                                        </div>
                                 </div>
 
                                 <!-- BACKGROUND -->
