--- a/setting.html
+++ b/setting.html
@@ -167,6 +167,10 @@
                 <label for='range-slider_line-height'>Line height</label>
                 <input class='range-slider__range' id='range-slider_line-height' type='range' min='1' max='2' step='0.05' value='1'>
                 <span class='range-slider__value'>1</span>
+        </div>        <div class='range-slider'>
+                <label for='range-slider_letter-spacing'>Letter spacing</label>
+                <input class='range-slider__range' id='range-slider_letter-spacing' type='range' min='-10' max='20' step='0.1' value='-10'>
+                <span class='range-slider__value'>-10</span>
         </div>                                        </div>
                                 </div>
 
