[Global] Dynamic font scaling (w/o affecting other elements)

--- a/setting.html
+++ b/setting.html
@@ -147,9 +147,9 @@
 
                                 <!-- FONT -->
                                 <div id="font-panel" class="option-panel mb-4">
-                                        <p class="option-label">Font</p>
+                                        <p class="option-label">Text</p>
                                         <div id="font-family-panel">
-                                                <p>Family</p>
+                                                <p>Font</p>
                                                 <div class="dropdown" id="dropdown-font-family">
         <button type="button" class="dropdown-label">Agency FB</button>
         <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -164,6 +164,10 @@
                 <!-- <a class="dropdown-item" href="#">Separated link</a> -->
         </div>
 </div>        <div class='range-slider'>
+                <label for='range-slider_size-scale'>Size scale</label>
+                <input class='range-slider__range' id='range-slider_size-scale' type='range' min='0.8' max='1.4' step='0.01' value='0.8'>
+                <span class='range-slider__value'>0.8</span>
+        </div>        <div class='range-slider'>
                 <label for='range-slider_line-height'>Line height</label>
                 <input class='range-slider__range' id='range-slider_line-height' type='range' min='1' max='2' step='0.05' value='1'>
                 <span class='range-slider__value'>1</span>
