[Global] Implement font preset
This allows to customize each font dependently

--- a/setting.html
+++ b/setting.html
@@ -149,7 +149,7 @@
                                 <div id="font-panel" class="option-panel mb-4">
                                         <p class="option-label">Text</p>
                                         <div id="font-family-panel">
-                                                <p>Font</p>
+                                                <p class="mb-0">Font</p>
                                                 <div class="dropdown" id="dropdown-font-family">
         <button type="button" class="dropdown-label">Agency FB</button>
         <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
