[NES] Basic: Button component (static)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="css/dynamic-style.css" type="text/css" />
 </head>
 
-<body class="neu-style ">
+<body class="nes-style ">
                                 
         <div class="display-table">
                 <div class="display-content ">
