--- a/setting.html
+++ b/setting.html
@@ -13,6 +13,7 @@
         </button>
         <div class="dropdown-menu">
                                         <a class="dropdown-item" href="javascript:;" value="flat-style">Flat</a>
+                                        <a class="dropdown-item" href="javascript:;" value="nes-style">NES</a>
                                         <a class="dropdown-item" href="javascript:;" value="neu-style">Neumorphism</a>
                                         <a class="dropdown-item" href="javascript:;" value="glass-style">Glassmorphism</a>
                                 <!-- <div class="dropdown-divider"></div> -->
@@ -157,9 +158,12 @@
                 <span class="sr-only">Toggle Dropdown</span>
         </button>
         <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="javascript:;" value="0">Palette Mosaic</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Agency FB</a>
                                         <a class="dropdown-item" href="javascript:;" value="0">Style Script</a>
                                         <a class="dropdown-item" href="javascript:;" value="0">Ubuntu</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">BioRhyme</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Roboto</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Special Elite</a>
                                 <!-- <div class="dropdown-divider"></div> -->
                 <!-- <a class="dropdown-item" href="#">Separated link</a> -->
         </div>
