--- a/setting.html
+++ b/setting.html
@@ -164,13 +164,14 @@
                                         <a class="dropdown-item" href="javascript:;" value="0">BioRhyme</a>
                                         <a class="dropdown-item" href="javascript:;" value="0">Roboto</a>
                                         <a class="dropdown-item" href="javascript:;" value="0">Special Elite</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Press Start 2P</a>
                                 <!-- <div class="dropdown-divider"></div> -->
                 <!-- <a class="dropdown-item" href="#">Separated link</a> -->
         </div>
 </div>        <div class='range-slider'>
                 <label for='range-slider_size-scale'>Size scale</label>
-                <input class='range-slider__range' id='range-slider_size-scale' type='range' min='0.8' max='1.4' step='0.01' value='0.8'>
-                <span class='range-slider__value'>0.8</span>
+                <input class='range-slider__range' id='range-slider_size-scale' type='range' min='0.5' max='1.4' step='0.01' value='0.5'>
+                <span class='range-slider__value'>0.5</span>
         </div>        <div class='range-slider'>
                 <label for='range-slider_line-height'>Line height</label>
                 <input class='range-slider__range' id='range-slider_line-height' type='range' min='1' max='2' step='0.05' value='1'>
