[NES] Form: Checkbox component (static)

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@ echo Toggle(label: "Dynamic toggle");
 </code></pre>
 </div><div class=" d-flex justify-content-center flex-row">
                         <div class="checkbox">
-        <input id="checkbox_dynamic-checkbox" type="checkbox" value="dynamic-checkbox">
+        <input id="checkbox_dynamic-checkbox" type="checkbox"  value="dynamic-checkbox">
         <label for="checkbox_dynamic-checkbox">
                 <i class="fas fa-check"></i>
         </label>
         <div class="name">Dynamic checkbox</div>
 </div>        </div><div class="code-block">
-        <pre><code class="language-php">// optional params: string $id = $value = format($name)
+        <pre><code class="language-php">// optional params: string $id = $value = format($name), bool $checked = false  
 echo Checkbox(name:"Dynamic checkbox");
 </code></pre>
 </div><div class=" d-flex justify-content-center flex-row">
