[Global] Scale only texts with 'zoom'

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@ echo Checkbox(name:"Dynamic checkbox");
 </code></pre>
 </div><div class=" d-flex justify-content-center flex-row">
                         <div class="dropdown" id="dropdown-demo">
-        <button type="button" class="dropdown-label">Dynamic dropdown</button>
+        <button type="button" class="dropdown-label">
+                <p class="scalable">Dynamic dropdown</p>
+        </button>
         <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="fas fa-angle-down dropdown-arrow"></span>
                 <span class="sr-only">Toggle Dropdown</span>
