--- a/setting.html
+++ b/setting.html
@@ -6,7 +6,9 @@
                                 <p class="option-label">UI Style</p>
                                 <!-- TODO: make buttons  equal widths -->
                                 <div class="dropdown" id="dropdown-ui-style">
-        <button type="button" class="dropdown-label">Select style</button>
+        <button type="button" class="dropdown-label">
+                <p class="scalable">Select style</p>
+        </button>
         <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="fas fa-angle-down dropdown-arrow"></span>
                 <span class="sr-only">Toggle Dropdown</span>
@@ -152,7 +154,9 @@
                                         <div id="font-family-panel">
                                                 <p class="mb-0">Font</p>
                                                 <div class="dropdown" id="dropdown-font-family">
-        <button type="button" class="dropdown-label">Agency FB</button>
+        <button type="button" class="dropdown-label">
+                <p class="scalable">Agency FB</p>
+        </button>
         <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="fas fa-angle-down dropdown-arrow"></span>
                 <span class="sr-only">Toggle Dropdown</span>
