--- a/setting.html
+++ b/setting.html
@@ -15,7 +15,8 @@
         </button>
         <div class="dropdown-menu">
                                         <a class="dropdown-item" href="javascript:;" value="flat-style">Flat</a>
-                                        <a class="dropdown-item" href="javascript:;" value="nes-style">NES</a>
+                                        <a class="dropdown-item" href="javascript:;" value="nes-style">NES - Pixel</a>
+                                        <a class="dropdown-item" href="javascript:;" value="win98-style">Windows 98</a>
                                         <a class="dropdown-item" href="javascript:;" value="neu-style">Neumorphism</a>
                                         <a class="dropdown-item" href="javascript:;" value="glass-style">Glassmorphism</a>
                                 <!-- <div class="dropdown-divider"></div> -->
@@ -203,6 +204,7 @@
                                                         <div class="col-4 background-item animated-gradient-bg"> </div>
                                                         <div class="col-4 background-item  linear-gradient-bg"> </div>
                                                         <div class="col-4 background-item vanishing-stripes-bg"> </div>
+                                                        <div class="col-4 background-item windows98-bg"> </div>
                                                 </div>
                                         </div>
                                         <div id="inner-background-panel" class="mt-3">
@@ -217,6 +219,7 @@
                                                         <div class="col-4 background-item animated-gradient-bg"> </div>
                                                         <div class="col-4 background-item  linear-gradient-bg"> </div>
                                                         <div class="col-4 background-item vanishing-stripes-bg"> </div>
+                                                        <div class="col-4 background-item windows98-bg"> </div>
                                                 </div>
                                         </div>
                                 </div>
