[Common] Container: Title bar component

--- a/setting.html
+++ b/setting.html
@@ -1,15 +1,15 @@
 
 <div id="setting-section" class="setting-section">
         <div class="text-center setting-panel hide">
-                <div class="title-bar">
-                        <p class="title-bar-text scalable">Setting</p>
-                        <div class="title-bar-controls">
-                                <button aria-label="Minimize"></button>
-                                <button aria-label="Restore"></button>
-                                <button aria-label="Close"></button>
-                        </div>
-                </div>
-                <div class="setting-panel-content">
+                <div class=" title-bar">
+        <div class="title-bar-text-wrapper scalable">Setting</div>
+        <div class="title-bar-text scalable">Setting</div>
+        <div class="title-bar-controls">
+                <button aria-label="Minimize"></button>
+                <button aria-label="Restore"></button>
+                <button aria-label="Close"></button>
+        </div>
+</div>                <div class="setting-panel-content">
                         <ul class="theme-skin mb-1 radio-button-group" id="ui-style-panel">
                                 <p class="option-label">UI Style</p>
                                 <!-- TODO: make buttons  equal widths -->
