Use Dropdown for background selection

--- a/setting.html
+++ b/setting.html
@@ -201,35 +201,50 @@
                                         <p class="option-label">Background</p>
                                         <div id="outer-background-panel">
                                                 <p> Outer </p>
-                                                <div class="row px-4 justify-content-center">
-                                                        <div class="col-4 background-item " id="none-bg"> </div>
-                                                        <div class="col-4 background-item custom-bg hide" id="custom-bg"> </div>
-                                                </div>
-                                                <div class="row px-4 justify-content-center">
-                                                        <div class="col-4 background-item liquid-cheese-bg"> </div>
-                                                        <div class="col-4 background-item protruding-squares-bg"> </div>
-                                                        <div class="col-4 background-item wintery-sunburst-bg"> </div>
-                                                        <div class="col-4 background-item animated-gradient-bg"> </div>
-                                                        <div class="col-4 background-item  linear-gradient-bg"> </div>
-                                                        <div class="col-4 background-item vanishing-stripes-bg"> </div>
-                                                        <div class="col-4 background-item windows98-bg"> </div>
-                                                </div>
-                                        </div>
+                                                <div class="dropdown" id="dropdown-outer-bg">
+        <button type="button" class="dropdown-label">
+                <p class="scalable">None</p>
+        </button>
+        <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="fas fa-angle-down dropdown-arrow"></span>
+                <span class="sr-only">Toggle Dropdown</span>
+        </button>
+        <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="javascript:;" value="0">None</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Liquid cheese</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Protruding squares</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Wintery sunburst</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Animated gradient</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Linear gradient</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Vanishing stripes</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Windows98</a>
+                                <!-- <div class="dropdown-divider"></div> -->
+                <!-- <a class="dropdown-item" href="#">Separated link</a> -->
+        </div>
+</div>                                        </div>
                                         <div id="inner-background-panel" class="mt-3">
                                                 <p> Inner </p>
-                                                <div class="row px-4 justify-content-center">
-                                                        <div class="col-4 background-item " id="background-0"> </div>
-                                                </div>
-                                                <div class="row px-4 justify-content-center">
-                                                        <div class="col-4 background-item liquid-cheese-bg"> </div>
-                                                        <div class="col-4 background-item protruding-squares-bg"> </div>
-                                                        <div class="col-4 background-item wintery-sunburst-bg"> </div>
-                                                        <div class="col-4 background-item animated-gradient-bg"> </div>
-                                                        <div class="col-4 background-item  linear-gradient-bg"> </div>
-                                                        <div class="col-4 background-item vanishing-stripes-bg"> </div>
-                                                        <div class="col-4 background-item windows98-bg"> </div>
-                                                </div>
-                                        </div>
+                                                <div class="dropdown" id="dropdown-inner-bg">
+        <button type="button" class="dropdown-label">
+                <p class="scalable">None</p>
+        </button>
+        <button type="button" class=" dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="fas fa-angle-down dropdown-arrow"></span>
+                <span class="sr-only">Toggle Dropdown</span>
+        </button>
+        <div class="dropdown-menu">
+                                        <a class="dropdown-item" href="javascript:;" value="0">None</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Liquid cheese</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Protruding squares</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Wintery sunburst</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Animated gradient</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Linear gradient</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Vanishing stripes</a>
+                                        <a class="dropdown-item" href="javascript:;" value="0">Windows98</a>
+                                <!-- <div class="dropdown-divider"></div> -->
+                <!-- <a class="dropdown-item" href="#">Separated link</a> -->
+        </div>
+</div>                                        </div>
                                 </div>
 
                         </div>
