--- a/index-raw.html
+++ b/index-raw.html
@@ -120,7 +120,8 @@ echo Dropdown(
         <pre><code class="language-php">&lt;?= include_once "components/advanced/_index.php";?&gt;</code></pre>
 </div>                        </div>
                 </div>
-        </div>        <script async src="js/main.js" type="module"></script>
+        </div>        <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
+        <script async src="js/main.js" type="module"></script>
 </body>
 
 </html>
