--- a/index-raw.html
+++ b/index-raw.html
@@ -121,7 +121,10 @@ echo Dropdown(
         <pre><code class="language-php">&lt;?= include_once "components/advanced/_index.php";?&gt;</code></pre>
 </div>                        </div>
                 </div>
-        </div>        <script async src="js/main.js" type="module"></script>
+        </div>        <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
+        <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
+        <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+        <script async src="js/main.js" type="module"></script>
 </body>
 
 </html>
