Update naming conventions

--- a/setting.html
+++ b/setting.html
@@ -200,7 +200,7 @@
                                 <div id="background-panel" class="option-panel mb-4">
                                         <p class="option-label">Background</p>
                                         <div id="outer-background-panel">
-                                                <p> Outer </p>
+                                                <p> Page </p>
                                                 <div class="dropdown" id="dropdown-outer-bg">
         <button type="button" class="dropdown-label">
                 <p class="scalable">None</p>
@@ -223,7 +223,7 @@
         </div>
 </div>                                        </div>
                                         <div id="inner-background-panel" class="mt-3">
-                                                <p> Inner </p>
+                                                <p> Containers </p>
                                                 <div class="dropdown" id="dropdown-inner-bg">
         <button type="button" class="dropdown-label">
                 <p class="scalable">None</p>
